@startuml
'https://plantuml.com/class-diagram

class Main{
    main()
    start()
}
class todoListsController{
    @FXML
    private ListView<String> listTitles;
    @FXML
    private TextField listTitle;
    @FXML
    private Button addList;
    @FXML
    private Button removeList;
    @FXML
    private Button editList;
    void removeList(MouseEvent event)
    public void addList(MouseEvent mouseEvent)
    public void editList(MouseEvent mouseEvent)
}
class item{
 private SimpleStringProperty item;
    private SimpleStringProperty description;
    private LocalDate dueDate;
    private CheckBox completionStatus;
    public item(String item, String description, LocalDate dueDate, CheckBox completionStatus)
    public String getItem()
    public SimpleStringProperty itemProperty()
    public void setItem(String item)
    public String getDescription()
    public SimpleStringProperty descriptionProperty()
    public void setDescription(String description)
}
class editItemController{
 @FXML
    private Button addDate;
    @FXML
    private Button addItem;
    @FXML
    private Button addDescription;
    @FXML
    private Button removeItem;
    @FXML
    private Button editDescription;
    @FXML
    private Button editDate;
    @FXML
    private TextField item;
    @FXML
    private TextField description;
    @FXML
    private TextField date;
    @FXML
    private ListView<String> itemList;
    @FXML
    private ListView<String> dateList;
    @FXML
    private ListView<String> descriptionList;
    @FXML
    private TableView<item> Tableview;
    @FXML
    private TableColumn<item, String> itemColumn;
    @FXML
    private TableColumn<item, String> descriptionColumn;
    @FXML
    private TableColumn<item, LocalDate> dueDateColumn;
    @FXML
    private TableColumn<item, CheckBox> completionStatusColumn;
    @FXML
    private CheckBox getCompletionStatus;
    @FXML
    private CheckBox status;
    @Override
    public void initialize(URL location, ResourceBundle resources)
    public void changeScene(ActionEvent event)
    public ObservableList<item> getItems()
    public void addDate(ActionEvent event)
    public void addDescription(ActionEvent event)
    public ListView<String> addItem(ActionEvent event)
    public void removeItem(MouseEvent mouseEvent)
    public void editDescription(MouseEvent mouseEvent)
    public void editDate(MouseEvent mouseEvent)
}

Main <|-- todoListsController
todoListsController <|-- editItemController
javafx.Main <|-- Main
editItemController <|-- item
@enduml